--- a/angular/src/app/app.css
+++ b/angular/src/app/app.css
@@ -12,8 +12,44 @@ h2, p {
 form {
     width: 320px;
     margin: 10px auto;
+    text-align: center;
+}
+
+#inputfile-wrapper {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 30px;
+    margin: 0px;
+    padding: 0px;
+    width: auto;
+    height: auto;
+}
+
+#inputfile-real {
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+#inputfile-button {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: red;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#inputfile-text {
+    margin-top: 20px;
+    display: block;
 }
 
 label {
-    margin: 20px 0;
+    padding: 10px;
+    display: block;
+}
+
+select {
+    margin-top: 10px;
 }
