--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -3,11 +3,16 @@ header {
     border: 2px solid black;
     display: flex;
     margin: 10px;
-    padding: 10px;
+    padding: 15px 0 8px 0;
     justify-content: center;
     align-items: center;
+    background-color: red;
+    color: white;
 }
 
 footer {
     text-align: center;
+    background-color: red;
+    color: white;
+    margin: 10px;
 }
