--- a/angular/src/app/app.css
+++ b/angular/src/app/app.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 80vh;
+    justify-content: center;
 }
 
 h2, p {
@@ -52,4 +53,25 @@ label {
 
 select {
     margin-top: 10px;
+}
+
+#format-section {
+    width: 300px;
+    margin: 10px auto;
+}
+
+#format-section select {
+    width: 85%;
+}
+
+button {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    font-size: 120%;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
