--- a/angular/src/app/app.html
+++ b/angular/src/app/app.html
@@ -1,7 +1,7 @@
 <div id="full-page">
     <h2>Welcome to the Data File Transformer</h2>
     <p>This tool allows the transformation of various data formats into others. Supported file types are XLSX, CSV and Parquet</p>
-    <form>
+    <form id="file-process" (submit)="onSubmit($event)">
         <label id="inputfile-wrapper">
             <span id="inputfile-button">Select File</span>
             <input type="file" id="inputfile-real">
@@ -9,7 +9,7 @@
         <span id="inputfile-text">No file selected</span>
         <div id="format-section">
             <label>Please select the output file format:</label>
-            <select id="outputformat" name="outputformat">
+            <select [(ngModel)]="outputformat" id="outputformat" name="outputformat">
                 <option value="xlsx">Excel</option>
                 <option value="csv">CSV</option>
                 <option value="parquet">Parquet</option>
