develop frontend processing and rebuild angular structure after version difficulties

--- a/angular/src/app/app.html
+++ b/angular/src/app/app.html
@@ -9,7 +9,7 @@
         <span id="inputfile-text">No file selected</span>
         <div id="format-section">
             <label>Please select the output file format:</label>
-            <select [(ngModel)]="outputformat" id="outputformat" name="outputformat">
+            <select [(ngModel)]="format" id="outputformat" name="outputformat">
                 <option value="xlsx">Excel</option>
                 <option value="csv">CSV</option>
                 <option value="parquet">Parquet</option>
