update interface to disable and colour submit button if file is not selected

--- a/angular/src/app/app.css
+++ b/angular/src/app/app.css
@@ -65,7 +65,7 @@ select {
 }
 
 button {
-    background-color: red;
+    background-color: grey;
     color: white;
     font-weight: bold;
     font-size: 120%;
