--- a/angular/src/app/app.html
+++ b/angular/src/app/app.html
@@ -1,7 +1,7 @@
 <div id="full-page">
     <h2>Welcome to the Data File Transformer</h2>
     <p>This tool allows the transformation of various data formats into others. Supported file types are XLSX, CSV and Parquet</p>
-    <form id="file-process" (submit)="onSubmit($event)">
+    <form id="file-process" (submit)="onSubmit($event)" enctype="multipart/form-data" method="POST">
         <label id="inputfile-wrapper">
             <span id="inputfile-button">Select File</span>
             <input type="file" id="inputfile-real" (change)="onChange($event)">
